fetching data from server made the complete dashboard page with responsiveness

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,3 +13,14 @@ html,body,#root,.app{
   @apply bg-gray-900;
   @apply text-gray-900;
 }
+
+@media (min-width: 768px) {
+  .custom-grid-rows{
+    grid-template-rows: repeat(8, 20vh);
+  }
+}
+@media (min-width: 1280px) {
+  .custom-grid-rows{
+    grid-template-rows: repeat(8, 7.5vh);
+  }
+}
